--- a/changes.txt
+++ b/changes.txt
@@ -1,11 +1,11 @@
 
 some changes to mattn go-oci8 sql driver:
 
--many bugs fixed. 
+-many bugs fixed.
 -driver doesn't pass go pointers to CGO, can work with future go versions
 -support more oracle types, blob, clob, timestamp, interval, rowid
--return INTERVAL YEAR TO MONTH as int64 (months)
--return INTERVAL DAY TO SECOND as duration
+-return INTERVAL YEAR TO MONTH as int64(months)
+-return INTERVAL DAY TO SECOND as int64(nanosecs)
 -return rowid as string
 -native support for float64, int64
 
@@ -13,4 +13,7 @@ some changes to mattn go-oci8 sql driver:
 -removed LastInsertId  from Result, oracle returns LastInsertId as rowid descriptor,
 		can't be converted to int64, only to string
 -when connection are not in transaction, changes to database are autocommited
+
+
+
 
